--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title> Raul Moroni Capcha Cadillo | WDD 130</title>
 </head>
 <body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
-
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Site</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Raul Moroni Capcha Cadillo | WDD 130</h1>
+        <img src="images/20231014_005237 (1).jpg" alt="Hello, my name is Raul Moroni Capcha Cadillo" width="200">
+        <p>Hello! My name is Raúl Moroni Capcha Cadillo. More specifically, I'm from the city of Huánuco. I like to dance; I usually do it in my free time. I also enjoy listening to music and watching movies. I served a full-time mission in the Lima, Peru Mission.</p>
+    </main>
+    <footer>
+        <p>©2025 | Raul Moroni Capcha Cadillo | Huánuco, Perú</p>
+    </footer>
 </body>
 </html>
