--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <h1>Raul Moroni Capcha Cadillo | WDD 130</h1>
-        <img src="images/20231014_005237 (1).jpg" alt="Hello, my name is Raul Moroni Capcha Cadillo" width="200">
+        <img src="images/20231014_005237.jpg" alt="Hello, my name is Raul Moroni Capcha Cadillo" width="200">
         <p>Hello! My name is Raúl Moroni Capcha Cadillo. More specifically, I'm from the city of Huánuco. I like to dance; I usually do it in my free time. I also enjoy listening to music and watching movies. I served a full-time mission in the Lima, Peru Mission.</p>
     </main>
     <footer>
