--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Raul Moroni Capcha Cadillo | WDD 130</title>
+    <title>Raul Moroni Capcha Cadillo | WDD 130</title>
+
+    <!-- ✅ Nuevas meta etiquetas -->
+    <meta name="description" content="WDD130 - Home Page of Raul Moroni Capcha Cadillo. Learn more about me, my hobbies, and my country Peru.">
+    <meta name="author" content="Raul Moroni Capcha Cadillo">
+
+    <!-- Conexión al CSS -->
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
@@ -12,11 +19,24 @@
             <a href="wwr/">Rafting Site</a>
         </nav>
     </header>
+
     <main>
         <h1>Raul Moroni Capcha Cadillo | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Raul Moroni Capcha Cadillo" width="200">
-        <p>Hello! My name is Raúl Moroni Capcha Cadillo. More specifically, I'm from the city of Huánuco. I like to dance; I usually do it in my free time. I also enjoy listening to music and watching movies. I served a full-time mission in the Lima, Peru Mission.</p>
+        <p>Hello! My name is Raúl Moroni Capcha Cadillo. I am from the city of Huánuco, Perú.  
+        I like to dance, and I usually do it in my free time. I also enjoy listening to music and watching movies.  
+        Another important part of my life is that I served a full-time mission in Peru-Limatambo Mission.</p>
     </main>
+
+    <!-- ✅ Nuevo aside -->
+    <aside>
+        <h2>About Peru</h2>
+        <img src="images/peru.jpg" alt="Beautiful view of Peru" width="200">
+        <p>Peru is a country in South America known for its rich culture, history, and breathtaking landscapes.  
+        From Machu Picchu to the Amazon rainforest and the Andes mountains, Peru is a land full of wonders.  
+        Huánuco, my city, is located in the central highlands and is famous for its warm climate and traditions.</p>
+    </aside>
+
     <footer>
         <p>©2025 | Raul Moroni Capcha Cadillo | Huánuco, Perú</p>
     </footer>
