--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- 18 September 2025 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raul Moroni Capcha Cadillo | WDD 130</title>
 
-    <!-- ✅ Nuevas meta etiquetas -->
+    <!-- ✅ New meta tags -->
     <meta name="description" content="WDD130 - Home Page of Raul Moroni Capcha Cadillo. Learn more about me, my hobbies, and my country Peru.">
     <meta name="author" content="Raul Moroni Capcha Cadillo">
 
-    <!-- Conexión al CSS -->
+    <!-- Connection to CSS -->
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -17,6 +18,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Site</a>
+            <a href="wr/ site-planrafting.html">Siteplan</a>
+            <a href="https://www.facebook.com/raul.moroni.capcha.cadillo/">Profile</a>
         </nav>
     </header>
 
@@ -26,10 +29,18 @@
         <p>Hello! My name is Raúl Moroni Capcha Cadillo. I am from the city of Huánuco, Perú.  
         I like to dance, and I usually do it in my free time. I also enjoy listening to music and watching movies.  
         Another important part of my life is that I served a full-time mission in Peru-Limatambo Mission.</p>
+<ul class="box">
+  <li><a href="https://www.churchofjesuschrist.org/temples/details/philadelphia-pennsylvania-temple" 
+         target="_blank">Philadelphia Pennsylvania Temple</a></li>
+  <li><a href="https://www.churchofjesuschrist.org/temples/details/paris-france-temple" 
+         target="_blank">Paris France Temple</a></li>
+  <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple" 
+         target="_blank">Berlin Germany Temple</a></li>
+</ul>
     </main>
 
-    <!-- ✅ Nuevo aside -->
-    <aside>
+    <!-- ✅ New aside -->
+    <aside class="box">
         <h2>About Peru</h2>
         <img src="images/peru.jpg" alt="Beautiful view of Peru" width="200">
         <p>Peru is a country in South America known for its rich culture, history, and breathtaking landscapes.  
