--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="About us page for White Water Rafting company. Learn our history, mission, and adventure spirit.">
+  <meta name="description"
+    content="About us page for White Water Rafting company. Learn our history, mission, and adventure spirit.">
   <meta name="author" content="Raúl Moroni Capcha Cadillo">
-  <title>About Us - White Water Rafting</title>
+  <title>About Us - Rafting Travel</title>
   <link rel="stylesheet" href="styles/rafting.css">
 </head>
+
 <body>
   <header>
-    <img src="images/logo.jpg" alt="White Water Rafting Logo" width="150">
+    <img src="images/logo.jpg" alt="Rafting Travel Logo" width="150">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
@@ -23,11 +26,11 @@
     <!-- Hero section -->
     <div class="hero">
       <img src="images/hero.jpg" alt="Rafting adventure in whitewater rapids">
-      <h1>White Water Rafting</h1>
+      <h1>Rafting Travel</h1>
       <article>
         <img src="images/happy_client.jpg" alt="Smiling rafting client">
         <p>
-          Our mission is to provide safe and unforgettable rafting adventures. 
+          Our mission is to provide safe and unforgettable rafting adventures.
           We connect people with nature while delivering thrilling experiences on the river.
         </p>
       </article>
@@ -37,8 +40,9 @@
     <section>
       <h2>Our History</h2>
       <p>
-        White Water Rafting was founded by adventure enthusiasts with a passion for rivers and the outdoors. 
-        Over the years, we have guided thousands of explorers through some of the most breathtaking waterways in the region.
+        Rafting Travel was founded by adventure enthusiasts with a passion for rivers and the outdoors.
+        Over the years, we have guided thousands of explorers through some of the most breathtaking waterways in the
+        region.
       </p>
     </section>
 
@@ -50,7 +54,7 @@
   </main>
 
   <footer>
-    <p>© 2024 White Water Rafting | Designed by Raúl Moroni Capcha Cadillo</p>
+    <p>© 2025 Rafting Travel | Designed by Raúl Moroni Capcha Cadillo</p>
     <nav class="socialmedia">
       <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
       <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
@@ -58,4 +62,5 @@
     </nav>
   </footer>
 </body>
+
 </html>
