--- a/wwr/about.html
+++ b/wwr/about.html
@@ -56,9 +56,9 @@
   <footer>
     <p>© 2025 Rafting Travel | Designed by Raúl Moroni Capcha Cadillo</p>
     <nav class="socialmedia">
-      <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
-      <a href="#"><img src="images/instagram.jpg" alt="Instagram"></a>
+      <a href="https://www.facebook.com/raul.moroni.capcha.cadillo/"><img src="images/facebook.png" alt="Facebook"></a>
+      <a href="https://x.com/MoroniRaul"><img src="images/twitter.png" alt="Twitter"></a>
+      <a href="https://www.instagram.com/moroni_capcha/"><img src="images/instagram.jpg" alt="Instagram"></a>
     </nav>
   </footer>
 </body>
