--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <!-- HEADER -->
   <header>
     <img src="images/logo.jpg" alt="Rafting Travel Logo" width="150">
     <nav>
@@ -23,7 +24,7 @@
   </header>
 
   <main>
-    <!-- Hero section -->
+    <!-- HERO section -->
     <div class="hero">
       <img src="images/hero.jpg" alt="Rafting adventure in whitewater rapids">
       <h1>Rafting Travel</h1>
@@ -36,23 +37,54 @@
       </article>
     </div>
 
-    <!-- History Section -->
+    <!-- HISTORY section -->
     <section>
       <h2>Our History</h2>
-      <p>
-        Rafting Travel was founded by adventure enthusiasts with a passion for rivers and the outdoors.
-        Over the years, we have guided thousands of explorers through some of the most breathtaking waterways in the
-        region.
-      </p>
+      <div class="history-content">
+        <p>
+          Rafting Travel was founded by adventure enthusiasts with a passion for rivers and the outdoors.
+          Over the years, we have guided thousands of explorers through some of the most breathtaking waterways in the
+          region.
+        </p>
+        <img src="images/history.jpg" alt="Historic rafting group photo">
+        <p>
+          Today, our team continues to expand, offering new routes and experiences while staying true to our love for
+          adventure and respect for nature.
+        </p>
+      </div>
     </section>
 
-    <!-- Adventure Section -->
+    <!-- ADVENTURES section -->
     <section>
       <h2>Adventure Awaits You!</h2>
       <p>Join us for the next great adventure and make unforgettable memories on the river.</p>
+
+      <div class="adventure-gallery">
+        <figure>
+          <img src="images/adventure1.jpg" alt="Los Dientes del Diablo rapids">
+          <figcaption>Los Dientes del Diablo</figcaption>
+        </figure>
+        <figure>
+          <img src="images/adventure2.jpg" alt="Big Mallard rapids">
+          <figcaption>Big Mallard</figcaption>
+        </figure>
+        <figure>
+          <img src="images/adventure3.jpg" alt="Half Day Adventure">
+          <figcaption>Half Day Adventure</figcaption>
+        </figure>
+        <figure>
+          <img src="images/adventure4.jpg" alt="Sunset Rafting Trip">
+          <figcaption>Sunset Trip</figcaption>
+        </figure>
+        <figure>
+          <img src="images/adventure5.jpg" alt="Family Rafting Experience">
+          <figcaption>Family Adventure</figcaption>
+        </figure>
+      </div>
     </section>
   </main>
 
+  <!-- FOOTER -->
   <footer>
     <p>© 2025 Rafting Travel | Designed by Raúl Moroni Capcha Cadillo</p>
     <nav class="socialmedia">
