--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -38,7 +38,7 @@
       <div class="map">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019981709685!2d-122.41941518468104!3d37.77492977975908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858064c2bcbf05%3A0x9a6e2c8d4f35b0b4!2sSan%20Francisco!5e0!3m2!1sen!2sus!4v1672356000000!5m2!1sen!2sus"
-          width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+          style="width: 100%; height: 300px; border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
 
