--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -32,38 +32,37 @@
       <p>✉️ <a href="mailto:info@whitewater.com">info@whitewater.com</a></p>
     </section>
 
-    <!-- CONTACT GRID (Map + Form) -->
-    <section class="contact-grid">
-      <!-- Map -->
-      <div class="map">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019981709685!2d-122.41941518468104!3d37.77492977975908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858064c2bcbf05%3A0x9a6e2c8d4f35b0b4!2sSan%20Francisco!5e0!3m2!1sen!2sus!4v1672356000000!5m2!1sen!2sus"
-          style="width: 100%; height: 300px; border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
+    <section class="contact-map">
+      <h2>Find Us</h2>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019981709685!2d-122.419415!3d37.774929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858064c2bcbf05%3A0x9a6e2c8d4f35b0b4!2sSan%20Francisco!5e0!3m2!1sen!2sus!4v1672356000000!5m2!1sen!2sus"
+        style="width: 100%; height: 300px; border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </section>
 
-      <!-- Form -->
-      <form class="contact-form">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" placeholder="Your name" required>
+    <!-- Form -->
+    <form class="contact-form">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" placeholder="Your name" required>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="Your email" required>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" placeholder="Your email" required>
 
-        <p><strong>Message Purpose:</strong></p>
-        <label><input type="radio" name="purpose" value="general" required> General Inquiry</label>
-        <label><input type="radio" name="purpose" value="reservation"> Reservation Question</label>
-        <label><input type="radio" name="purpose" value="website"> Website Suggestion</label>
+      <p><strong>Message Purpose:</strong></p>
+      <label><input type="radio" name="purpose" value="general" required> General Inquiry</label>
+      <label><input type="radio" name="purpose" value="reservation"> Reservation Question</label>
+      <label><input type="radio" name="purpose" value="website"> Website Suggestion</label>
 
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" placeholder="Type here..."></textarea>
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" placeholder="Type here..."></textarea>
 
-        <label class="checkbox">
-          <input type="checkbox" name="subscribe"> Please subscribe me to the monthly newsletter
-        </label>
+      <label class="checkbox">
+        <input type="checkbox" name="subscribe"> Please subscribe me to the monthly newsletter
+      </label>
 
-        <button type="submit">Get in Touch!</button>
-      </form>
+      <button type="submit">Get in Touch!</button>
+    </form>
     </section>
 
     <!-- EMPLOYEES -->
